<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/manual_text_view"
        style="@style/BottomSheetTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumption_options_manual"
        app:drawableStartCompat="@drawable/ic_keyboard" />

    <TextView
        android:id="@+id/take_photo_text_view"
        style="@style/BottomSheetTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumption_options_take_photo"
        app:drawableStartCompat="@drawable/ic_add_photo" />

    <TextView
        android:id="@+id/from_gallery_text_view"
        style="@style/BottomSheetTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumption_options_from_gallery"
        app:drawableStartCompat="@drawable/ic_image" />

    <TextView
        android:id="@+id/generate_text_view"
        style="@style/BottomSheetTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumption_options_generate_data"
        app:drawableStartCompat="@drawable/ic_architecture" />

</LinearLayout>